// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-flex wp-components-h-stack css-4jhg4d"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="wp-components-flex-item css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-flex wp-components-h-stack css-xvx5bv"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-h-stack css-1a3z7e3"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-flex wp-components-h-stack css-4jhg4d"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;
